fixed heading in about page on tablet viewport

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -205,7 +205,7 @@ table {
   display: flex;
   width: 100%;
   background-color: #235B2D;
-  height: 10%;
+  height: max-content;
 }
 .about-header h1 {
   width: 30%;
@@ -222,13 +222,12 @@ table {
 }
 @media (max-width: 500px) {
   .about-header {
-    height: 10%;
+    height: max-content;
   }
   .about-header h1 {
     width: 100%;
     margin-top: 1rem;
-    padding-top: 0.5rem;
-    padding-left: 1rem;
+    padding: 0.5rem 1rem 0.5rem 0;
     font-size: 2rem;
   }
   .about-header h1 a {
@@ -239,9 +238,17 @@ table {
     color: #fff;
   }
 }
-/* @media @tablet {
-
-} */
+@media (max-width: 1129px) and (min-width: 501px) {
+  .about-header {
+    display: flex;
+    flex-direction: column;
+  }
+  .about-header h1 {
+    width: 100%;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    font-size: 2rem;
+  }
+}
 .signup-nav {
   height: 15%;
   display: flex;
@@ -321,6 +328,20 @@ nav ul li .about {
 }
 .about-nav ul li a:hover {
   color: #fff;
+}
+@media (max-width: 1129px) and (min-width: 501px) {
+  .about-nav {
+    width: 100%;
+    display: flex;
+  }
+  .about-nav ul {
+    width: 100%;
+  }
+  .about-nav ul li {
+    width: 25%;
+    text-align: center;
+    font-size: 1.5rem;
+  }
 }
 .intro-text {
   width: 45%;
@@ -463,7 +484,7 @@ nav ul li .about {
     text-align: right;
   }
 }
-@media (max-width: 399px) and (min-width: 250px) {
+@media (max-width: 399px) and (min-width: 91px) {
   .team .gallery .card {
     flex-direction: column;
     width: 100%;
