--- a/less/aboutnav.less
+++ b/less/aboutnav.less
@@ -22,3 +22,21 @@
         }
     }
 }
+
+@media @tablet {
+    .about-nav {
+        width: 100%;
+        display: flex; 
+        ul {
+            // border: red solid 1px;
+            width: 100%; 
+            
+            li {
+                width: 25%; 
+                text-align: center;
+                font-size: 1.5rem;
+            }
+        }
+    }
+    
+}
