--- a/less/mixins.less
+++ b/less/mixins.less
@@ -27,6 +27,11 @@
     font-size: 1rem;
 }
 
+.mainheading() {
+    padding: .5rem 1rem .5rem 1rem;
+    font-size: 2rem;
+}
+
 //text boxes
 .membername() {
     margin: 1rem 0 .5rem 0;
