--- a/less/variables.less
+++ b/less/variables.less
@@ -8,7 +8,7 @@
 @black: rgba(48, 54, 49, 0.7); 
 
 //media queries
-@small: ~"(max-width: 399px) and (min-width: 250px)";
+@small: ~"(max-width: 399px) and (min-width: 91px)";
 @mobile: ~"(max-width: 500px)"; 
 @tablet: ~"(max-width: 1129px) and (min-width: 501px)"; 
 @widescreen: ~"(min-width: 1130px)";
